<resources>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav.dashboard">Dashboard</string>
    <string name="nav.project">Project</string>
    <string name="nav.absence">Absence</string>
    <string name="nav.settings">Settings</string>
    <string name="nav.logout">Log out</string>
    <string-array name="nav_item_activity_titles">
        <item>Dashboard</item>
        <item>Project</item>
        <item>Absence</item>
        <item>Notification</item>
        <item>Settings</item>
    </string-array>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Password</string>
    <string name="text_login">LOGIN</string>
    <string name="textview.hint.profile_name">Your Name</string>
    <string name="textview.hint.profile_role">DEV</string>
    <string name="textview.hint.profile_email">abc@gmail.com</string>
    <string name="textview.text.address">Address (*)</string>
    <string name="textview.text.phone">Phone (*)</string>
    <string name="textview.text.gender">Gender (*)</string>
    <string name="textview.text.marital_status">Marital Status (*)</string>
    <string name="textview.text.birthday">Birthday (*)</string>
    <string name="textview.text.type">Type (*)</string>
    <string name="textview.text.team">Team (*)</string>
    <string name="textview.text.start_day">Start Day (*)</string>
    <string name="textview.text.end_day">End Day (*)</string>
    <string name="checkbox.text.remember">Remember me</string>
    <string name="app_name">HRM</string>
    <string name="nav_header_desc">Navigaion header</string>
    <string name="nav_header_title">Your Name</string>
    <string name="nav_header_subtitle">abc@gmail.com</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="action_notification">notification</string>
    <string name="radio.text.gender_male">Male</string>
    <string name="radio.text.gender_female">Female</string>
    <string name="button.changePassword">Change Password</string>
    <string name="label.viewProfile">Your Profile</string>
    <string name="employee_view_basic">Basic</string>
    <string name="employee_view_project">Project</string>
    <string name="description.hint.address">Da Nang, Viet Nam</string>
    <string name="description.hint.phone">0123456789</string>
    <string name="description.hint.gender">Female</string>
    <string name="desciption.hint.statusMarital">Single</string>
    <string name="description.hint.birth">16/12/1996</string>
    <string name="description.hint.position">Fulltime</string>
    <string name="desciption.hint.start">22/9/2018</string>
    <string name="desciption.hint.end">22/09/2020</string>
    <string name="employee_view_value_chart">Value chart</string>
    <string name="edt_check_error_invalid_email">invalid email</string>
    <string name="error_invalid_pass">invalid password</string>
    <string name="catch_invalid_password_empty">Password is not empty</string>
    <string name="catch_invalid_password_length">Length password is greater 6</string>
    <string name="catch_invalid_email_empty">Email is not empty</string>
    <string name="error_incorrect_password">incorrect password</string>
    <string name="textview.nameProjectEmployee">Name Project</string>
    <string name="textview.roleProjectEmployee">Role Employee</string>
    <string name="textview.dayStartProjectEmployee">22/09/2018</string>
    <string name="textview.dayEndProjectEmployee">16/12/2018</string>
    <string name="textview.statusOfProject">In-Progress</string>
    <string name="textview.text.dayStart">Start at:</string>
    <string name="textview.text.dayEnd">End at:</string>
    <string name="menu_overtime">My Overtime</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_project">Project</string>
    <string name="menu_absence">My Absence</string>
    <string name="menu_manage">Manage</string>
    <string name="menu_employee">Employees</string>
    <string name="menu_absence_empl">Absence</string>
    <string name="menu_logout">Logout</string>
    <string name="tv_allowAbsence">Số ngày phép có thể nghỉ :</string>
    <string name="tv_remainingAbsenceDays">Số ngày phép còn lại :</string>
    <string name="action_add_absence">new absence</string>
    <string name="tv_annualLeave">Số ngày nghỉ hằng năm</string>
    <string name="textview.text.name">Name (*)</string>
    <string name="textview.text.position">Position (*)</string>
    <string name="textview.text.email">Email (*)</string>
    <string name="textview.nameEmployeeAbsence">Name Employee</string>
    <string name="textview.text.symbol"> - </string>
    <string name="textview.reason">Holiday leave</string>
    <string name="textview.project">EMC_201</string>
    <string name="textview.text.from">From: </string>
    <string name="textview.text.to">To: </string>
    <string name="textview.noteAbsence">Muốn đăng kí</string>
    <string name="absence_manage_for_po_fragment.title">List absences</string>
    <string name="overtime_status">Status</string>
    <string name="form_absence_edt_tungay">From</string>
    <string name="form_absence_edt_denNgay">To</string>
    <string name="form_absence_spinner_loaiNghi">Type absence</string>
    <string name="form_absence_edt_reason">Reason</string>
    <string name="form_absence_edt_note">Note</string>
    <string name="form_absence_cb_nghiBoSung">Absence additional</string>
    <string name="form_absence_btn_submit">Submit</string>
    <string name="bar_menu_absence_xinNghi">Làm đơn xin nghỉ</string>
    <string name="form_absence_edt_thoiGianBatDau">From</string>
    <string name="form_absence_edt_thoiGianKetThuc">To</string>
    <string name="form_absence_spinner_thoiGianNghi">Thời gian nghỉ</string>
    <string name="form_holiday_edt_tenNgayNghi">Holiday name</string>
    <string name="form_holiday_edt_ngayBatDau">From</string>
    <string name="form_holiday_edt_ngayKetThuc">To</string>
    <string name="form_holiday_edt_ghiChu">Note</string>
    <string name="hr_view_list_absence">List Absences</string>
    <string name="hr_holiday">Holiday</string>
    <string name="absence_button_filter">Filter</string>
    <string name="absence_text_type">Nghỉ theo bảo hiểm</string>
    <string name="absence_remain">Số ngày phép còn lại:</string>
    <string name="absence_last_year">Số ngày phép năm ngoái:</string>
    <string name="absence_present_year">Số ngày phép có thể nghỉ:</string>
    <string name="absence_total_days">Số ngày phép đã nghỉ:</string>
    <string name="absence_no_salary_day">Số ngày nghỉ không lương:</string>
    <string name="absence_insurance">Số ngày nghỉ bảo hiểm:</string>
    <string name="absence_sub_salary">Số ngày nghỉ trừ lương:</string>
    <string name="title_edit_profile_activity">Edit profile</string>
    <string name="profile_address">Da Nang, Viet Nam</string>
    <string name="holiday_new">New holiday</string>
    <string name="absence_status_waiting">waiting</string>
    <string name="absence_add">Add Absence</string>
    <string name="profile_view_address">Address</string>
    <string name="profile_view_phone">Phone</string>
    <string name="profile_view_gender">Gender</string>
    <string name="profile_view_marital_status">Marital status</string>
    <string name="profile_view_birthday">Birthday</string>
    <string name="profile_view_type">Type</string>
    <string name="profile_view_start_day">Start Day</string>
    <string name="profile_view_end_day">End Day</string>
    <string name="list_employee_manage_title">Employees</string>
    <string name="holiday_name">Tên ngày nghỉ</string>
    <string name="holiday_type">Loại ngày nghỉ</string>
    <string name="holiday_note">Ghi ghú</string>
    <string name="tv_unpaidLeave">Số ngày nghỉ không lương :</string>
    <string name="tv_bereavementLeave">Nghỉ tang :</string>
    <string name="tv_maternityLeave">Số ngày nghỉ thai sản :</string>
    <string name="tv_marriageLeave">Số ngày nghỉ cưới hỏi :</string>
    <string name="profile_view_team">Team</string>
    <string name="desciption.hint.team">PHP</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="fra_list_emp_nothingToShow">Nothing to show</string>
    <string name="infor_null">--</string>
    <string name="error_field_is_not_empty">Field is not empty</string>
    <string name="absence_from">From (*)</string>
    <string name="absence_to">To (*)</string>
    <string name="absence_hint_from">Từ ngày (*)</string>
    <string name="absence_hint_to">Đến ngày (*)</string>
    <string name="absence_time">Time (*)</string>
    <string name="absence_reason">Reason (*)</string>
    <string name="absence_type">Type (*)</string>
    <string name="text_title_edit_absence">Edit Absence</string>
    <string name="text_title_view_absence">View Absence</string>
    <string name="menu_id_overtime">id_overtime</string>
    <string name="menu_id_dashboard">id_dashboard</string>
    <string name="menu_id_absence">id_absence</string>
    <string name="menu_id_manage">id_manage</string>
    <string name="menu_id_employee">id_manage_employee</string>
    <string name="menu_id_manage_absence">id_manage_absence</string>
    <string name="menu_id_manage_holiday">id_manage_holiday</string>
    <string name="menu_id_manage_overtime">id_manage_overtime</string>
    <string name="menu_id_logout">id_logout</string>
    <string name="da_nang_viet_nam">Da Nang, Viet Nam</string>
    <string name="_0123456789">0123456789</string>
    <string name="female">Female</string>
    <string name="single">Single</string>
    <string name="_16_12_1996">16/12/1996</string>
    <string name="fulltime">Fulltime</string>
    <string name="_22_9_2018">22/9/2018</string>
    <string name="_22_09_2020">22/09/2020</string>
    <string name="absence_button_select">Select</string>
    <string name="absence_item_reason">Reason: </string>
    <string name="absence_item_type_time">Time: </string>
    <string name="textview.time">All day</string>
    <string name="error_from_not_greater_than_to">Field \'from\' can\'t greater than field \'to\'</string>
    <string name="absence_type_time">Time:</string>
    <string name="overtime_reason">Reason:</string>
    <string name="overtime_date">Date:</string>
    <string name="overtime_date_hint">6-9-2018</string>
    <string name="overtime_timeStart">08:20 PM</string>
    <string name="overtime_timeEnd">09:55 PM</string>
    <string name="text_overtime_normal_day">Normal</string>
    <string name="text_number">12</string>
    <string name="text_overtime_weekend">Weekend</string>
    <string name="text_overtime_holiday">Holiday</string>
    <string name="text_hour">12:30</string>
    <string name="text_type_absence">Cả ngày</string>
    <string name="text_total">Total:</string>
    <string name="text_date">Date:</string>
    <string name="status">STATUS</string>
    <string name="description_edit">Edit</string>
    <string name="decription_delete">Delete</string>
    <string name="overtime_numberTime">Number time</string>
    <string name="overtime_time">Time:</string>
</resources>