<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:layout_margin="@dimen/text_padding"
    tools:context=".views.profile.ViewProfileActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imv_avatar"
                    android:layout_width="@dimen/avatar_size_small"
                    android:layout_height="@dimen/avatar_size_small"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/text_padding"
                    android:src="@drawable/img_avatar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="@string/textview.hint.profile_name"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_padding"
                        android:background="@color/colorAccent"
                        android:paddingLeft="@dimen/text_padding"
                        android:paddingRight="@dimen/text_padding"
                        android:text="@string/textview.hint.profile_role"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="@string/textview.hint.profile_email"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_medium" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:paddingLeft="@dimen/edt_margin_bottom"
                android:paddingRight="@dimen/edt_margin_bottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/profile_view_address"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boder_edittext"
                    android:hint="@string/da_nang_viet_nam"
                    android:paddingBottom="@dimen/text_padding"
                    android:paddingLeft="@dimen/text_padding"
                    android:paddingRight="@dimen/text_padding"
                    android:paddingTop="@dimen/text_padding" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/profile_view_phone"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boder_edittext"
                    android:hint="@string/_0123456789"
                    android:paddingBottom="@dimen/text_padding"
                    android:paddingLeft="@dimen/text_padding"
                    android:paddingRight="@dimen/text_padding"
                    android:paddingTop="@dimen/text_padding" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/profile_view_gender"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boder_edittext"
                    android:paddingBottom="@dimen/text_padding"
                    android:paddingLeft="@dimen/text_padding"
                    android:paddingRight="@dimen/text_padding"
                    android:paddingTop="@dimen/text_padding"
                    android:text="@string/female" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/profile_view_marital_status"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_maritalStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boder_edittext"
                    android:paddingBottom="@dimen/text_padding"
                    android:paddingLeft="@dimen/text_padding"
                    android:paddingRight="@dimen/text_padding"
                    android:paddingTop="@dimen/text_padding"
                    android:text="@string/single" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/profile_view_birthday"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boder_edittext"
                    android:paddingBottom="@dimen/text_padding"
                    android:paddingLeft="@dimen/text_padding"
                    android:paddingRight="@dimen/text_padding"
                    android:paddingTop="@dimen/text_padding"
                    android:drawableRight="@drawable/ic_date"
                    android:text="@string/_16_12_1996" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/profile_view_type"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boder_edittext"
                    android:paddingBottom="@dimen/text_padding"
                    android:paddingLeft="@dimen/text_padding"
                    android:paddingRight="@dimen/text_padding"
                    android:paddingTop="@dimen/text_padding"
                    android:text="@string/fulltime" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/profile_view_team"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boder_edittext"
                    android:paddingBottom="@dimen/text_padding"
                    android:paddingLeft="@dimen/text_padding"
                    android:paddingRight="@dimen/text_padding"
                    android:paddingTop="@dimen/text_padding"
                    android:drawableRight="@drawable/ic_people"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/text_padding"
                        android:text="@string/profile_view_start_day"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/text_padding"
                        android:text="@string/profile_view_end_day"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tv_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/boder_edittext"
                        android:paddingBottom="@dimen/text_padding"
                        android:paddingLeft="@dimen/text_padding"
                        android:paddingRight="@dimen/text_padding"
                        android:paddingTop="@dimen/text_padding"
                        android:drawableRight="@drawable/ic_date"
                        android:text="@string/_22_9_2018" />


                    <TextView
                        android:id="@+id/tv_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_weight="1"
                        android:background="@drawable/boder_edittext"
                        android:paddingBottom="@dimen/text_padding"
                        android:paddingLeft="@dimen/text_padding"
                        android:paddingRight="@dimen/text_padding"
                        android:paddingTop="@dimen/text_padding"
                        android:drawableRight="@drawable/ic_date"
                        android:text="@string/_22_09_2020" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_changepassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:background="@drawable/shape_button_changepassword"
                    android:text="@string/button.changePassword"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="visible" />

</RelativeLayout>
